--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -2,5 +2,8 @@
 @import "./helpers/variables";
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 
-
-@import './layout/index.scss'
+@import './helpers/base';
+@import './helpers/utils';
+@import './helpers/swiper';
+@import './components/card';
+@import './layout/index.scss';
