add surroundings.html & course.html

--- a/app/assets/style/components/_card.scss
+++ b/app/assets/style/components/_card.scss
@@ -10,3 +10,33 @@
     border-radius: 16px 16px 0 0 !important;
   }
 }
+
+.overlay-img-h{
+  height: 350px;
+  @include media-breakpoint-up(md){
+    height: 216px;
+  }
+  @include media-breakpoint-up(lg){
+    height: 350px;
+  }
+}
+.card-img-h{
+  height: 196px;
+  @include media-breakpoint-up(md){
+    height: 161px;
+  }
+  @include media-breakpoint-up(lg){
+    height: 196px;
+  }
+}
+
+.card-img-w-m{
+  width: 255px;
+  @include media-breakpoint-up(md){
+    width: 210px;
+  }
+  @include media-breakpoint-up(lg){
+    width: 255px;
+  }
+}
+
