--- a/app/assets/style/layout/index.scss
+++ b/app/assets/style/layout/index.scss
@@ -6,7 +6,9 @@
   height: 560px;
   // background-attachment: fixed;
   @include media-breakpoint-up(md) {
+    .hero{
       height: 582px;
+    }
   }
 }
 
