--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -19,7 +19,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light py-0">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
               <img class="w-50" src="./assets/images/DOYOGA-logo.png" alt="logo">
             </a>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#">課程介紹</a>
+                  <a class="nav-link px-4" href="course.html">課程介紹</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#">瑜珈空間</a>
+                  <a class="nav-link px-4" href="surroundings.html">瑜珈空間</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link px-4" href="#" >當月課表</a>
@@ -75,8 +75,8 @@
           </ul>
         </div>
         <ul class="list-unstyled mb-0">
-          <li><a href="" class="text-white pb-2">課程介紹</a></li>
-          <li><a href="" class="text-white pb-2">瑜珈空間</a></li>
+          <li><a href="course.html" class="text-white pb-2">課程介紹</a></li>
+          <li><a href="surroundings.html" class="text-white pb-2">瑜珈空間</a></li>
           <li><a href="" class="text-white pb-2">當月課表</a></li>
         </ul>
         <p class="m-0 text-white position-md-absolute bottom-0 start-50 translate-md-middle-x">© 2021. All Rights Reserved.</p>
