--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -5,5 +5,6 @@
 @import './helpers/base';
 @import './helpers/utils';
 @import './helpers/swiper';
+@import './helpers/hover';
 @import './components/card';
 @import './layout/index.scss';
