--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <link rel="stylesheet" href="./assets/style/all.css">
   </head>
@@ -28,18 +29,18 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="course.html">課程介紹</a>
+                  <a class="nav-link px-4 hvr-underline-from-center" href="course.html">課程介紹</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="surroundings.html">瑜珈空間</a>
+                  <a class="nav-link px-4 hvr-underline-from-center" href="surroundings.html">瑜珈空間</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-4" href="#" >當月課表</a>
+                  <a class="nav-link px-4 hvr-underline-from-center" href="#" >當月課表</a>
                 </li>
               </ul>
               <div class="d-flex">
-                <button class="btn btn-outline-secondary-dark rounded-pill me-4" type="button">立即預約</button>
-                <button class="btn btn-outline-secondary-dark rounded-pill" type="button">聯絡我們</button>
+                <button class="hvr-pulse-grow btn btn-outline-secondary-dark rounded-pill me-4" type="button">立即預約</button>
+                <button class=" hvr-pulse-grow btn btn-outline-secondary-dark rounded-pill" type="button">聯絡我們</button>
               </div>
             </div>
           </div>
@@ -69,9 +70,9 @@
             <img class="mb-2" src="./assets/images/DOYOGA.png" alt="" width="96" height="31">
           </a>
           <ul class="d-flex list-unstyled mb-0">
-            <li><a class="text-white me-2 fs-4" href=""><i class="bi bi-facebook"></i></a></li>
-            <li><a class="text-white me-2 fs-4" href=""><i class="bi bi-instagram"></i></a></li>
-            <li><a class="text-white fs-4" href=""><i class="bi bi-chat-left-text-fill"></i></a></li>
+            <li><a class="text-white me-2 fs-4 hvr-grow" href=""><i class="bi bi-facebook"></i></a></li>
+            <li><a class="text-white me-2 fs-4 hvr-grow" href=""><i class="bi bi-instagram"></i></a></li>
+            <li><a class="text-white fs-4 hvr-grow" href=""><i class="bi bi-chat-left-text-fill"></i></a></li>
           </ul>
         </div>
         <ul class="list-unstyled mb-0">
@@ -83,6 +84,7 @@
       </div>
     </footer>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/vendors.js"></script>
     <script src="./assets/js/all.js"></script>
   </body>
